might fix tiles for algo's on iPhone

--- a/css/algorithms.css
+++ b/css/algorithms.css
@@ -79,8 +79,6 @@ html {
 
 .game-container button,
 .game-container2 button {
-  width: 20px;
-  height: 20px;
   border:1px solid rgb(51, 51, 51);
 }
 
@@ -139,8 +137,6 @@ html {
 
   .game-container button,
   .game-container2 button {
-  width: 15px;
-  height: 15px;
   border:1px solid rgb(51, 51, 51);
   }
 
@@ -156,7 +152,7 @@ html {
 
 @media only screen and (max-height: 830px) and (max-width: 913px) {
   .game-container, .game-container2 { 
-    grid-auto-rows: 10px;
+    grid-auto-rows: 12px;
     margin-bottom: 10px;
   }
 
@@ -164,10 +160,8 @@ html {
     margin-top: 5px;
   }
 
-  .game-container button,
-  .game-container2 button {
-    width: 10px;
-    height: 10px;
+  .title-container {
+    margin: 1rem;
   }
 }
 
